--- a/package.json
+++ b/package.json
@@ -37,6 +37,9 @@
     "webpack": "^5.94.0",
     "webpack-cli": "^4.10.0"
   },
+  "overrides": {
+    "glob": "^10.5.0"
+  },
   "babel": {
     "presets": [
       "@babel/preset-react",
